# ai-bootcamp-epam

./: .gitignore  README.md  pyproject.toml
04. Prompt Engineering/01. ChatGPT Prompt Engineering for Developers/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l3.html  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb
04. Prompt Engineering/07. Task/: answer.md  prompt.md  result.json
07. Agents/01. AI Agents in LangGraph/: 01.py  02.py  04.py  Lesson_1_Student.ipynb  Lesson_2_Student.ipynb  Lesson_3_Student.ipynb  Lesson_4_Student.ipynb  Lesson_5_Student.ipynb  Lesson_6_Student.ipynb  README.MD  temp_test_gradio.ipynb
07. Agents/02. Building Your Own Database Agent/: L1_Your_First_AI_Agent.ipynb
08. Better RAG (Advanced)/05. Task/: rag-strategy.md  readme.md
