[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = "A Python project created with Poetry"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.50.2"
python-dotenv = "^1.0.1"
# Use for some old parts of the code
#openai = "0.27"
redlines = "^0.4.2"
panel = "^1.5.1"
jupyter-bokeh = "^4.0.5"
gradio = "^4.44.1"
langgraph = "^0.2.34"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.1"
jupyter = "^1.1.1"
tavily-python = "^0.5.0"
duckduckgo-search = "^6.2.13"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

